refactor: AI 서비스 코드 품질 개선 및 버그 수정
- 예외 처리 개선: AiClientException만 재시도 대상으로 분리
  * TextAIService, ImageAIService에서 IllegalArgumentException 등 영구적 오류는 즉시 실패 처리
  * 재시도 예산 낭비 방지 및 장애 보고 지연 문제 해결

- 코드 품질 개선
  * GroqChatRequest: 역할 문자열 상수화, 배열을 List로 변경
  * RetryExecutor: 불필요한 @RequiredArgsConstructor 제거
  * AbstractPromptBuilder: getSystemPrompt()를 abstract로 명시, 이중 로깅 방지

- 설정 및 API 호환성 개선
  * LeonardoProperties: maxConsecutivePollingFailures 설정 추가
  * LeonardoImageAiClient: negative_prompt 필드명 수정 (snake_case), 주석 정확성 개선

- 로깅 개선
  * AIServiceRegistry: 빈 Optional 케이스에 경고 로그 추가, Stream.toList() 사용
  * AbstractPromptBuilder: WARN 로그를 DEBUG로 변경하여 거짓 경보 방지